--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@headlessui/tailwindcss": "^0.2.1",
     "@remixicon/react": "^4.2.0",
     "@tremor/react": "^3.17.4",
-    "next": "14.2.7",
+    "localforage": "^1.10.0",
+    "next": "^14.2.12",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
